--- a/src/styles/calendarView.module.css
+++ b/src/styles/calendarView.module.css
@@ -1,4 +1,4 @@
-.container {
+.calendarMain {
   padding: 16px;
   color: var(--dark-blue) !important;
 }
@@ -30,86 +30,85 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient( to right ,#ffffff00, #f2f4f87b);
+  background: linear-gradient(to right, #ffffff00, #f2f4f87b);
   z-index: 100;
 }
 
-.dayCard {
+.calendarCard {
   min-width: 45px;
   border-radius: 8px;
   text-align: center;
   padding: 6px;
 }
 
-.dayCard small {
+.calendarCard small {
   font-size: 12px;
   display: block;
   margin-bottom: 4px;
 }
 
-.dayCard h2 {
+.calendarCard h2 {
   margin: 0;
   font-size: 20px;
   margin-bottom: 4px;
 }
 
-.dayCard ul {
+.calendarCard ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.dayCard li {
+.calendarCard li {
   font-size: 12px;
   margin-bottom: 4px;
 }
 
 .booked {
-    background-color: var(--primary-blue);
-    color: white;
+  background-color: var(--primary-blue);
+  color: white;
   border-radius: 6px;
-
 }
 
 .selected {
   background-color: var(--soft-purple);
 }
 
-.appointments {
+.schedule {
   display: flex;
   gap: 12px;
 }
 
-.appointment {
+.scheduleCard {
   padding: 12px 16px;
   border-radius: 8px;
   background-color: var(--soft-purple);
 }
 
-.selectedAppointment {
+.selectedScheduleCard {
   background-color: var(--primary-blue);
   color: white;
 }
 
-.appointmentTop {
+.card {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 4px;
 }
 
-.appointment h4 {
+.scheduleCard h4 {
   margin: 0;
   font-size: 14px;
 }
 
-.appointment small {
+.scheduleCard small {
   font-size: 12px;
   display: block;
   margin-bottom: 4px;
 }
 
-.appointment p {
+.scheduleCard p {
   font-size: 13px;
   margin: 0;
 }
